# HALO

./: .gitignore  README.md  build_cp.sh
assets/: Run.md
drl_moudle/: environment.yml  eval_ppo.py  train_ppo.py
drl_moudle/algorithms/: graph_ppo.py  mpc_ppo.py
drl_moudle/crowd_sim/envs/: crowd_sim.py
drl_moudle/crowd_sim/envs/policy/: orca.py
drl_moudle/crowd_sim/envs/utils/: agent.py  human.py  robot.py  state.py  utils.py
drl_moudle/data/model1/PPO_1/: events.out.tfevents.1742180799.wangchao-B760M-AORUS-ELITE-AX-DDR4.2459766.0
drl_moudle/modules/: callbacks.py  distributions.py  evaluation.py  graph_ppo_core.py  mpc_ppo_core.py  policies.py  torch_layers.py  type_aliases.py
drl_moudle/modules/envs/: simple_env.py
drl_moudle/simple_env/: agent.py  env.py  info.py  mpc_policy.py  orca.py
src/ocp_planner/: CMakeLists.txt  package.xml
src/ocp_planner/msg/: ControlVar.msg  DynaObstacle.msg  HumanState.msg  JointState.msg  ObstacleArray.msg  ObstacleState.msg  PolyState.msg  RobotState.msg  WallState.msg
src/ocp_planner/src/: astar.cc  astar.h  lookahead.cc  lookahead.h  main.cc  mpc.cc  mpc.h  ocp_bind.cc  planner.cc  planner.h  smooth.cc  smooth.h  types.h  utils.h
src/ocp_planner/srv/: OcpLocalPlann.srv
